Update script paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ai-stfy/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AIストファイ - AI時代の新しいあなたの強み分析</title>
+    <title>AIストファイ - AI時代の新しいあなたの強み診断</title>
     <script type="text/javascript">
       (function(l) {
         if (l.search[1] === '/' ) {
