--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     </script>
   </head>
   <body>
+    <!-- Cache busting comment -->
     <div id="root"></div>
     <script type="module" src="./src/main.tsx"></script>
   </body>
